public/stylesheets/style.css
* {
  box-sizing: border-box;
}

body, html {
  height: 100%;
  padding: 0;
  margin: 0;
  font-family: sans-serif;
  color: #333;
}

header {
  border-bottom: 1px solid #ccc;
  display: flex;
  /* justify-content: space-between; */
  /* align-items: center; */
  padding: 0 1%;
  background-color: lavender;
  background-size: cover;
  width: 100%;
  z-index: 9999;
  top: 0;
  position: sticky;
}

header nav{
  display: flex;
  height: 6vw;
}

header nav img {
  height: 6vw;
}

a {
  text-decoration: none;
  color: #143864;
  font-weight: bold;
  transition: color .1s;
}

a:hover {
  color: #3486eb;
}

button {
  display: flex;
  background-color: #225ca3;
  border: 0;
  padding: 1%;
  color: white;
  font-weight: bold;
  transition: background-color .1s;
  cursor: pointer;
  border-radius: 5px;
  align-items: flex-end;
}

button:hover {
  background-color: #3486eb;
}

textarea, input {
  padding: .5%;
  border-radius: 5px;
  border: 1px solid #ccc;
}

textarea:focus, input:focus {
  outline: none;
  border: 1px solid #3486eb;
}

textarea {
  min-width: 40%;
  min-height: 100px;
}

form > div {
  margin-bottom: 2%;
}

form label {
  display: block;
}

main {
  display: flex;
  flex: 1;
  padding: 2% 4%;
  justify-content: center;
}

footer {
  border-top: 1px solid #ccc;
  display: flex;
  justify-content: center;
  padding: 1%;
  font-size: 110%;
}

nav.navbar {
  background-color: lavender;
}

.post-list {
  margin: 0;
  padding: 1rem;
  list-style-type: none;
}

.edit-link{
  text-align: center;
}

.wrapper {
  width: 100%;
  min-height: 100%;
  /* max-width: 1200px; */
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}

.btn-no-style {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  text-decoration: none;
  color: #225ca3;
  font-size: 100%;
  font-weight: bold;
  transition: color .1s;
  margin-left: 16px;
  padding-bottom: 2vw;
}

.btn-no-style:hover {
  background: none;
  color: #3486eb;
}

.delete-post-btn {
  background-color: #d41414;
}

.delete-post-btn:hover {
  background-color: #ff643d;
}

.card{
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 5vw;
  width: 20vw;
  cursor: pointer;
}


.doggo-img{
  width:  15vw;
  height: 20vw;
  object-fit: cover;
  margin: 1vw;
  position: relative;
  border-radius: 10px;
}

.image__overlay{
  position: absolute;
  top:0;
  left: 0;
  width: 100%;
  height: 100%;
  color: #ffff;
  background: rgba(0,0,0,0.6);
  display: flex;
  justify-content: center;
  align-items:center;
  border-radius: 4px;
  opacity: 0;
  transition: opacity 0.25s;
}

.image__overlay:hover{
  opacity: 1;
}

.image__overlay > * {
  transform: translateY(20px);
  transition: transform 0.25s;
}

.image__overlay:hover > * {
  transform: translateY(0);
}

.image__title{
  font-size: 2em;
  font-weight: bold;
}

.post {
  margin-bottom: 2%;
  line-height: 150%;
  background-color: lightblue;
  border-radius: 20px;
}


.post .title span {
  font-style: italic;
  font-size: 90%;
  color: #7d7d7d;
}

.edit-link {
  display: block;
  margin: -1.5% 0 2% 0;
}

.upvote-btn {
  background-color: #197d0f;
  transition: background-color .1s;
}

.upvote-btn:hover {
  background-color: #1f9c13;
}

.comment-form {
  margin-bottom: 5%;
}

.comment {
  padding: 1%;
  margin-bottom: 1%;
}

.comment:nth-child(odd) {
  background-color: #fff5eb;
}

.comment .meta {
  font-size: 90%;
  margin-bottom: .5%;
  opacity: .6;
}

.new-post-form input {
  width: 300px;
}

.edit-post-form {
  margin-bottom: 5%;
}

.followers-container {
  border: solid black 2px;
  padding: 5px;
}

.posts-container {
  border: solid black 2px;
  padding: 5px;
  margin-top: 10px;
}

.login-form {
  padding-right: 5vw;
  padding-top: 3vw;
  border-right: #ccc 2px solid;
}

.signup-form{
  padding-left: 5vw;
  padding-top: 3vw;
}

#profile-name {
  font-size: 2rem;
  text-align: center;
}

#profile-email {
  text-align: center;
}

#follower-list {
  margin: 0;
  padding: 1rem;
  list-style-type: none;
}

#follower-heading {
  text-align: center;
}

#post-heading {
  text-align: center;
}

